
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-03-27 Jean-François Viaud <jviaud@univ-lr.fr>
	+ src/lattice/Couple.java
		+ Add new class to generate lattice products
		+ Add corresponding iuml file
		+ Add corresponding test file
	+ src/lattice/Permutation.java
		+ Add new class to generate lattice of permutations
		+ Add corresponding iuml file
		+ Add corresponding test file
	+ src/lattice/LatticeFactory.java
		+ Add this classe to generate examples : random, product,
		permutation, boolean algebra
		+ Add corresponding iuml file
		+ Add corresponding test file

2014-03-27 Christophe Demko <chdemko@gmail.com>
	* utility/initiate-publish.sh
		+ Publish jar and compressed api doc

2014-03-22 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/lattice/Context.java
		+ Add random method
	* src/lattice/Context.iuml
		* Update file with random method
	* test/lattice/ContextTest.java
		+ Add test for random method
	* test/lattice/ClosureSystemTest.java
		+ Add missing tests

2014-03-20 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/lattice/ImplicationalSystem.iuml
		+ Add isReduced method

2014-03-19 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/test/BijectiveComponenetTest.java
		# Path are now Windows/Linux compliants
	* src/lattice/ImplicationalSystem.java
		+ Add isReduced method
		* Modify reduction method
	* src/lattice/ClosureSystem.java
		* Modify the comment of precedenceGraph method
		* Modify the getReductibleElements method
	* src/test/ImplicationalSystemTest.java
		+ Complete tests
	* src/test/ClosureSystemTest.java
		+ Add file
		+ Add 2 tests over 5

2014-03-18 Christophe Demko <chdemko@gmail.com>
	* README.md
	* lib/jacoco/jacocoant.jar